[package]
name = "philharmonic-policy"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-policy"
description = "Policy and tenancy for Philharmonic: Tenant, Principal, TenantEndpointConfig, RoleDefinition, RoleMembership, MintingAuthority, AuditEvent entity kinds with SCK at-rest encryption and permission evaluation."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
