[package]
name = "philharmonic-policy"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-policy"
description = "Policy and tenancy for Philharmonic: Tenant, Principal, RoleDefinition, RoleMembership, MintingAuthority, AuditEvent entity kinds with permission evaluation."

[dependencies]
philharmonic-types = "0.3"
philharmonic-store = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
aes-gcm = "0.10"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
philharmonic-store-sqlx-mysql = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql"] }
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio"] }
hex-literal = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
